@@ -1,3 +1,8 @@
+2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b64
+
+        * Fix: Redirect in multi_create_user didnt worked after successfull adding.
+               Reason: doctype header was set before redirect header.
+
 2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b63
 
 	* Fix: Skins will be ignored when embedded.  This was causing a lot
